# framework-portduino

./: .gitignore  CMakeLists.txt  package.json
ArduinoCore-API/api/: Common.h  HardwareSPI.h
cmake/: PortduinoConfig.cmake.in
cores/portduino/: Arduino.h  AsyncUDP.cpp  AsyncUDP.h  PortduinoGPIO.cpp  PortduinoGPIO.h  PortduinoPrint.cpp  main.cpp
cores/portduino/FS/: vfs_api.cpp
cores/portduino/linux/: LinuxHardwareI2C.cpp  LinuxHardwareI2C.h  LinuxHardwareSPI.cpp  LinuxSerial.cpp  LinuxSerial.h
cores/portduino/linux/gpio/: LinuxGPIOPin.cpp
